# test_python_project

./: .gitignore  Demo overview.md  Dockerfile  Dockerfile2  README.md  addon_install.py  blender test.py  blender_build_fan.py  blender_export_properties.py  blender_generate.py  cad_functions.py  convert_vtk.py  dashboardTypes.py  forces.py  gen1.py  gen2.py  gen2_multi.py  generate.py  generate.sh  image_train.py  load_data.py  main.py  my_openfoam_image  openFoam_Build_fan.py  openfoam test.py  openfoam_functions.py  openfoam_test.py  openfoam_tutorial.py  optimize_model.py  pyproject.toml  run_openfoam.sh  run_openfoam_2.sh  simulate.py  start_server.sh  test.py  thrust_power.csv  train_model.py  viewer.py
case/: log.simpleFoam
case/0/: U  epsilon  k  nut  p
case/constant/: MRFProperties  momentumTransport  physicalProperties  thermophysicalProperties  transportProperties
case/constant/extendedFeatureEdgeMesh/: propeller.extendedFeatureEdgeMesh
case/constant/polyMesh/: boundary  cellLevel  level0Edge  neighbour  owner  pointLevel  surfaceIndex
case/constant/polyMesh/sets/: wrongFaces
case/constant/triSurface/: propeller.eMesh  propeller.stl
case/system/: blockMeshDict  controlDict  createPatchDict  fvSchemes  fvSolution  snappyHexMeshDict  surfaceFeaturesDict
src/: dashboardTypes.py  main.py
