[tool.poetry]
name = "test-python-project"
version = "0.1.0"
description = ""
authors = ["John McRaven <john.mcraven@physicsx.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.111.1"
altair = {extras = ["all"], version = "^5.3.0"}
trimesh = "^4.4.3"
bpy = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
