[tool.mypy]
files = ["src/"]
mypy_path = "src/"
ignore_missing_imports = true

[tool.poetry]
name = "test-python-project"
version = "0.1.0"
description = ""
authors = ["John McRaven <john.mcraven@physicsx.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
altair = {extras = ["all"], version = "^5.3.0"}
pandas = "^2.2.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.2.240603"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
